--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "rxjs": "^7.8.1",
+    "sass": "^1.79.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
