--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "rxjs": "^7.8.1",
-    "sass": "^1.79.5"
+    "sass-embedded": "^1.79.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -35,7 +35,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "sass-embedded": "^1.79.5",
     "vite": "^5.4.8"
   }
 }
