--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "rxjs": "^7.8.1",
-    "sass-embedded": "^1.79.5"
+    "sass": "^1.79.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
